Fixed spacing on logo and started 1d (in comments).

--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -1,8 +1,15 @@
+/* Opdracht 1a */
+
 .navbar-one ul {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
 }
+
+
+
+
+/* Opdracht 1b */
 
 .navbar-two ul {
     display: flex;
@@ -10,20 +17,62 @@
     list-style-type: none;
 }
 
+
+
+
+/* Opdracht 1c */
+
+/*----- Navbar flexbox -----*/
 .navbar-three {
     display: flex;
 }
 
-
+      /*----- Logo flexbox -----*/
 .navbar-three .logo {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 2;
+}
+
+            /*----- Logo -----*/
+.navbar-three .logo img {
+
+}
+
+            /*----- Text flexbox -----*/
+.navbar-three .logo p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+      /*----- Menu flexbox -----*/
+.navbar-three ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    flex-grow: 98;
+ }
+
+
+
+
+/* Opdracht 1d */
+/*
+.navbar-four {
+    display: flex;
+}
+
+.navbar-four .logo {
     display: flex;
     justify-content: flex-start;
     flex-grow: 2;
  }
 
-.navbar-three ul {
+.navbar-four ul {
     display: flex;
     justify-content: flex-end;
     list-style-type: none;
     flex-grow: 1;
- }
+ }*/
